Fixed color on small heading

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@
   font-size: 20px;
   line-height: 25px;
   letter-spacing: 1.25px;
+  text-align: center;
 }
 
 .heading-xs {
